[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "day1"
path = "src/bin/day1/main.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/main.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/main.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/main.rs"